style.css
html {
    background: black;
    color: white;
    width: auto;
}

body {
    display:flex;
    align-items: center;
    justify-content: center;
    font-family: Arial;
    flex-flow: column;
}

#grid-parent {
    display:flex;
    align-items: center;
    justify-content: center;
    height: 97vh;
    overflow: hide;
}

h1{
    font-size: 4em;
    margin: 0 0 0.3em;
}

/* THE BUTTON */
.button-28 {
  appearance: none;
    width: 300px;
  background-color: transparent;
  border: 2px solid #2B2B2B;
  border-radius: 15px;
  box-sizing: border-box;
  color: #70706f;
  cursor: pointer;
  display: inline-block;
  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  font-weight: 600;
  line-height: normal;
  margin: 0;
  min-height: 60px;
  min-width: 0;
  outline: none;
  padding: 16px 24px;
  text-align: center;
  text-decoration: none;
  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: 80%;
  will-change: transform;
}

.button-28:disabled {
  pointer-events: none;
}

.button-28:hover {
  color: #fff;
  background-color: #1A1A1A;
  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
  transform: translateY(-2px);
  border: 2px solid #1A1A1A;
}

.button-28:active {
  box-shadow: none;
  transform: translateY(0);
}

#button-box{
    display: flex;
    height:auto;
    justify-content: center;
}

@media only screen and (max-width: 890px) {
    .button-28{
        width: 100%;
        margin: 0 0.25rem;
    }
    
    h1{
        margin-left: 0.25rem;
    }
}

/* room738 tag*/
.room-tag{
    position:absolute;
    bottom: 0;
    margin-bottom: 20px;
}

#room-text{
    text-decoration: none;
    color: white;
    font-size:1em;
    font-family: monospace;
}

